<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Ho</string>
    <string name="action_settings">Settings</string>
    <string name="signup">SIGNUP</string>
    <string name="login">LOGIN</string>
    <string name="what_is_ho">WHAT IS HO?</string>

    <string name="warning_invalid_length">Please enter a username between 3-20 characters</string>
    <string name="warning_invalid_chars">Please only use alphanumeric characters in your username</string>
    <string name="warning_password_length">Please enter a password at least 3 characters long</string>
    
    <string name="choose_username">CHOOSE USERNAME</string>
    <string name="choose_password">CHOOSE PASSWORD</string>
    <string name="tap_to_signup">TAP TO SIGNUP</string>
    
    <string name="username">USERNAME</string>
    <string name="password">PASSWORD</string>
    <string name="tap_to_login">TAP TO LOGIN</string>
    
    <string name="what_is_ho_text1">Ho is a single tap, hit it and quit it, communication tool</string>
    <string name="what_is_ho_text2">Ho to say\n\n\"good morning\"\n\n\"I\'m thinking of you\"\n\nor simply\n\n\"you\'s a ho\"</string>
    <string name="what_is_ho_text3">Just imagine getting\n\nHO\n\nfrom your best friend\n\nafter you\'ve slept with someone new</string>
    
    <string name="ho_yourself">HO YOURSELF</string>
    <string name="lamalamara">LAMALAMARA</string>
    <string name="add">+</string>
    
    <string name="settings">SETTINGS</string>
    <string name="logout">LOGOUT</string>
    <string name="done">DONE</string>
    
</resources>
