<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/red" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/current_user"
            style="@style/ho_text"
            android:background="@drawable/selector1" />

        <TextView
            android:id="@+id/num_hos"
            style="@style/ho_text"
            android:background="@drawable/selector2" />

        <TextView
            android:id="@+id/sound"
            style="@style/ho_text"
            android:background="@drawable/selector3"
            android:clickable="true"
            android:onClick="toggle_sound" />

        <TextView
            style="@style/ho_text"
            android:background="@drawable/selector1"
            android:clickable="true"
            android:onClick="what_is_ho"
            android:text="@string/what_is_ho" />

        <TextView
            style="@style/ho_text"
            android:background="@drawable/selector2"
            android:clickable="true"
            android:onClick="logout"
            android:text="@string/logout" />

        <TextView
            style="@style/ho_text"
            android:background="@drawable/selector3"
            android:clickable="true"
            android:onClick="done"
            android:text="@string/done" />
    </LinearLayout>

</ScrollView>